# uav-llm-integration

./: Dockerfile  README.md  run.sh
conf/: .env.conf  setup.txt  system_prompt.txt
src/deadman_safety/deadman_safety/: deadman_node.py
src/deadman_safety/launch/: deadman_safety.launch.py
src/llm_integration/: setup.py
src/llm_integration/launch/: llm_integration.launch.py
src/llm_integration/llm_integration/: camera_caption_node.py  llm_node.py  text_in_node.py  ui_node.py
src/master_launch/launch/: actual.launch.py  sim.launch.py
src/spoof_tools/: package.xml  setup.cfg  setup.py
src/spoof_tools/launch/: spoof_tools.launch.py
src/spoof_tools/spoof_tools/: mirage_node.py  poison_node.py  spoof_node.py
src/uav_sim/worlds/: world.sdf
